# memblk

./: .gitignore  LICENSE  README.md  main.c  main.out  memblk.c  memblk.h  meson.build  mymem.c  mymem.h
src/: memblk.c  memblk.h  meson.build
tests/: meson.build  tests.c
